# oastat

./: .gitignore  .travis.yml  CMakeLists.txt  Datamodel.md  HowToBuild.md  HowToRun.md  ProjectHome.md  README.md  create-win-version.sh  travis_build.script
extra/docker_builder/: Dockerfile
extra/windows/: oastat_create_db.bat  oastat_fill_db.bat
sql/: select_statements.usql  somesql.usql
sql/create_tables/: create_specific.sh  oastat_create_tables_common.sql
src/: Makefile  local.h  mxe-build.sh  oastat.cpp  oastat_delete_games.cpp  oastatstruct.cpp  oastatstruct.h
src/common/: common.cpp  local.h
src/db/: Db2CppDb.cpp  Db2CppDb.hpp  Db2DbiXX.cpp  Db2DbiXX.hpp  Db2PostgreSQL.cpp  Db2PostgreSQL.h  Db2Xml.cpp  Db2Xml.hpp  DbExtra.cpp  DbExtra.hpp  database.hpp  db2stdout.cpp  db2stdout.h
src/oss2db/: Accuracy2Db.cpp  Accuracy2Db.hpp  Award2Db.cpp  Award2Db.h  Challenge2Db.cpp  Challenge2Db.hpp  Ctf1f2Db.cpp  Ctf1f2Db.hpp  Ctf2Db.cpp  Ctf2Db.hpp  CtfElimination2Db.cpp  CtfElimination2Db.hpp  Disconnect2Db.cpp  Disconnect2Db.h  Elimination2Db.cpp  Elimination2Db.hpp  Harvester2Db.cpp  Harvester2Db.hpp  Point2Db.cpp  Point2Db.hpp  Warmup2Db.cpp  Warmup2Db.hpp  init2db.cpp  init2db.h  kill2db.cpp  kill2db.h  shutdown2db.cpp  shutdown2db.h  struct2db.h  userinfo2db.cpp  userinfo2db.h
